[package]
name = "cliptra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
cli-clipboard = "0.2.1"
dotenv = "0.15"
reqwest = {version = "0.11", features = ["blocking"]}
gtk4 = {version="0.4", package = "gtk4"}
dirs = "4.0"
